k8s/apps/departments/software/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: software
  labels:
    app: hrm_platform
    department: software
    managed-by: argocd
